<resources>
    <string name="app_name">Movie Info</string>
    <string name="base_image_path">https://image.tmdb.org/t/p/w500</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Generic text-->
    <string name="invalid_email_text">Email inválido</string>
    <string name="invalid_password_text">La contraseña es requerida</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="main_title">Peliculas</string>
    <!--Login Fragment-->
    <string name="email_hint">Email*</string>
    <string name="password_hint">Contraseña*</string>
    <string name="btn_login_title">Ingresar</string>
    <string name="login_error_message">Usuario o contraseña incorrecta, verifique los datos</string>

    <!--Main activity -->
    <string name="logout_title">Salir</string>
    <string name="logout_message">¿Desea cerrar sesión?</string>
    <string name="welcome_message">Bienvenido</string>

    <!--Movies Fragment -->
    <string name="votes_average">Calificación:</string>
    
    <!--Detail Fragment-->
    <string name="release_date_title">Fecha estreno:</string>
    <string name="runtime_title">Duración:</string>
    <string name="classification_title">Clasificación: </string>
    <string name="only_adult_text">Solo adultos</string>
    <string name="all_family_title">Toda la familia</string>
    <string name="genres_title">Género(s):</string>
</resources>